force-app/main/default/objects/sbaa__TrackedValue__c/fields/sbaa__ValueDate__c.field-meta.xml
<CustomField>
    <fullName>sbaa__ValueDate__c</fullName>
    <description>Stored value if data type is date</description>
    <inlineHelpText>Stored value if data type is date</inlineHelpText>
    <label>Value (Date)</label>
    <type>Date</type>
</CustomField>